tests/errors/syntax_template_invalid_interpolation.dang
let bad = `hello ${1 +}`
